[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/idle/0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Main_charecter/Main_Charecter.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/running/2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/running/4.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/running/5.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/running/3.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/falling/17.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/charecters/main charecter/jumping/15.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Pause/Pause_Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Pause/Pause_Layer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Buttons/Exit.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Buttons/ExitGenero.gd" type="Script" id=12]
[ext_resource path="res://Assets/Buttons/Skip.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 9.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "running",
"speed": 15.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
} ]

[node name="main_charecter" type="Node2D"]
position = Vector2( 0, -1 )

[node name="celeste" type="KinematicBody2D" parent="."]
position = Vector2( 159, 141 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="celeste"]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="celeste"]
scale = Vector2( 1.5, 1.5 )
limit_left = -1000000

[node name="AnimatedSprite" type="AnimatedSprite" parent="celeste"]
frames = SubResource( 2 )
animation = "jumping"

[node name="RayCastd" type="RayCast2D" parent="celeste"]
visible = false
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RayCaste" type="RayCast2D" parent="celeste"]
visible = false
enabled = true
cast_to = Vector2( -10, 0 )

[node name="Timer" type="Timer" parent="celeste"]

[node name="Pause_Button" parent="celeste" instance=ExtResource( 9 )]
margin_left = -155.0
margin_top = -85.0
margin_right = -135.0
margin_bottom = -65.0

[node name="Button" parent="celeste" instance=ExtResource( 11 )]
margin_left = 115.0
margin_top = -85.0
margin_right = 165.0
margin_bottom = -65.0
rect_scale = Vector2( 0.8, 0.8 )
icon = ExtResource( 13 )
script = ExtResource( 12 )

[node name="Pause_Layer" parent="." instance=ExtResource( 10 )]

[connection signal="timeout" from="celeste/Timer" to="celeste" method="_on_Timer_timeout"]
